--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
   
   html, body {
     
-    background: #808080;
+    background: #f3f3f3;
     margin: 20px;
     color: #3e4144;
     -webkit-font-smoothing: antialiased;
@@ -39,3 +39,17 @@
   .p-1 {
     padding: 1px;
   }
+
+.row {
+  display: flex;
+}
+
+.col{
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
+input{
+  display: block;
+  margin: 5px;
+}
